[gd_scene load_steps=16 format=3 uid="uid://b1nrnx4vshkyp"]

[ext_resource type="Script" uid="uid://bf0x61gn2535o" path="res://gameplay/menus/game_over_screen.gd" id="1_ijgdh"]
[ext_resource type="FontFile" uid="uid://dpil64o22ebvd" path="res://assets/fonts/ByteBounce.ttf" id="2_8lamq"]
[ext_resource type="Texture2D" uid="uid://cif14wa0yq1d4" path="res://assets/Game Over/Game Over.png" id="2_ta5yj"]

[sub_resource type="LabelSettings" id="LabelSettings_ta5yj"]
font = ExtResource("2_8lamq")
font_color = Color(0.54901963, 0.47058824, 0.64705884, 1)

[sub_resource type="LabelSettings" id="LabelSettings_31u0w"]
font = ExtResource("2_8lamq")
font_color = Color(0.0627451, 0.07058824, 0.10980392, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ta5yj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_31u0w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l3n55"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_af6xi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h40cf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eg0eq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6yfta"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ygqgl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d5uuk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bt0if"]

[node name="GameOverScreen" type="CanvasLayer"]
layer = 24
script = ExtResource("1_ijgdh")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.23137255, 0.12156863, 0.45882353, 1)

[node name="GameOver" type="Sprite2D" parent="."]
position = Vector2(100, 100)
texture = ExtResource("2_ta5yj")

[node name="HighScore" type="Label" parent="."]
offset_left = 68.0
offset_top = 129.0
offset_right = 132.0
offset_bottom = 149.0
text = "000"
label_settings = SubResource("LabelSettings_ta5yj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Difficulty" type="Label" parent="."]
offset_left = 68.0
offset_top = 27.0
offset_right = 132.0
offset_bottom = 47.0
text = "000"
label_settings = SubResource("LabelSettings_31u0w")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 68.0
offset_top = 65.0
offset_right = 132.0
offset_bottom = 84.0
text = "000"
label_settings = SubResource("LabelSettings_ta5yj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="."]
offset_left = 13.0
offset_top = 176.0
offset_right = 79.0
offset_bottom = 196.0
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_ta5yj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_31u0w")
theme_override_styles/hover = SubResource("StyleBoxEmpty_l3n55")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_af6xi")
theme_override_styles/focus = SubResource("StyleBoxEmpty_h40cf")

[node name="MainMenuButton" type="Button" parent="."]
offset_left = 127.0
offset_top = 176.0
offset_right = 181.0
offset_bottom = 196.0
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_eg0eq")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6yfta")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ygqgl")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_d5uuk")
theme_override_styles/focus = SubResource("StyleBoxEmpty_bt0if")
